[package]
name = "timelock"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "timelock"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "=0.24.2"
anchor-spl = "=0.24.2"
spl-token = "=3.2.0"
solana-program = "=1.9.29"
solana-security-txt = "1.1.0"